refactor: start new user data model, remove userjob (wip)